# personal-corp-backbone

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  PLAN.md  README.md  TASKS.md  TEST_POLICY.md  pyproject.toml
.github/workflows/: ci.yml
reports/: T001.md  T003.md  T004.md  T005.md  T006.md  T007.md  T008.md  T009.md  T010.md  T011.md  T012.md  T013.md
scripts/: check_docs.sh
src/backbone/: __init__.py  cli.py  models.py  pipeline.py  render.py  tasks.py
tests/: conftest.py  test_cli.py  test_pipeline.py  test_render.py  test_tasks.py
tests/fixtures/: fake_claude_cli.py  lesson_analysis_snapshot.json  lesson_transcript.txt
